--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
     .nav ul { list-style: none; display: flex; gap: 20px; }
     .nav ul li a { color: #fff; font-weight: 500; }
 
-    .hero { background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('img/kegiatan-5.png'); background-size: cover; background-position: center; height: 85vh; display: flex; align-items: center; }
+    .hero { background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('img/PPDB\ NEW.jpeg'); background-size: cover; background-position: center; height: 85vh; display: flex; align-items: center; }
     .hero-content { max-width: 2000px; margin: auto; padding: 5%; color: #fff; }
 
     section { padding: 70px 20px; }
@@ -66,48 +66,46 @@ transition:all 0.3s ease-in-out;
   transform: translateY(-10px);
 }
 
-  .video-wrapper {
-    width: 105%;
-    max-width: 700px; /* boleh kamu ubah */
-    margin: 0 auto;
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-  flex-direction: column;
-    transition:all 0.3s ease-in-out;  
+ .video-wrapper {
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
 }
-.video-wrapper:hover{
-  transform: translateY(-10px);  
+
+.video-wrapper:hover {
+  transform: translateY(-10px);
 }
 
 .video-wrapper video {
-    width: 150%;
-    height: auto;
-    display: block;
-    object-fit: cover;   /* atau "contain" */
-    aspect-ratio: 16 / 9; /* supaya proporsional */
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover; /* POTONG RAPIH */
+  aspect-ratio: 16 / 9;
 }
 
+
 .gallery {
-   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap:30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
   padding: 20px;
-  margin: auto;
 }
+
 
 .gallery img {
   width: 100%;
-  height: 230px;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   border-radius: 10px;
-  transition:all 0.3s ease-in-out;  
+  transition: transform 0.3s ease-in-out;
 }
 
-/* efek hover (halus & sopan) */
 .gallery img:hover {
-   transform: translateY(-10px);
+  transform: translateY(-10px);
 }
+
 
 .btn{
    display: inline-block;
